# DDBP

./: .env  .env1  .env2  .env3  .gitignore  .last_build_timestamp  Cargo.toml  Dockerfile  README.md  a.sh  api_tests.sh  b.sh  create-keyfile.sh  docker-compose.yml  documento.tex  fast-start-app.sh  init.sql  mongo-keyfile  presentacion.md  runProject.sh  setup-replica.sh  start-app.sh  start.sh  start_multiple_apis.sh  stop-app.sh
.github/workflows/: rust.yml
app.bak/: Cargo.toml  Dockerfile  check_replica_set.sh  fdasfsd.md  mongo-keyfile  runProject.sh  start.sh
app.bak/src/: main.rs
distributed_db/: .env  Cargo.toml  docker-compose.yml
distributed_db/src/: main.rs
my-app/: package.json  pnpm-lock.yaml
my-app/app/: error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx
my-app/app/api/posts/: route.ts
my-app/app/api/posts/[id]/: route.ts
my-app/app/api/users/[id]/: route.ts
my-app/app/posts/[id]/: page.tsx
my-app/app/users/[id]/: page.tsx  user-posts.tsx
my-app/components/shared/: feed.tsx  loading-skeleton.tsx
my-app/components/ui/: comment-section.tsx  post-card.tsx  user-info.tsx
my-app/lib/: api.ts  data.ts
rust-app/: .dockerignore  Cargo.toml  Dockerfile
rust-app/rust-app/: Dockerfile
rust-app/src/: errors.rs  handlers.rs  main.rs  main.rs.bak  models.rs
social_media_api/: Cargo.toml
social_media_api/src/: main.rs
src/: config.rs  main.rs
src/api/: mod.rs  routes.rs
src/api/handlers/: mod.rs  read.rs  sync.rs  write.rs
src/cluster/: discovery.rs  mod.rs  node.rs  replication.rs
src/db/: connection.rs  distributed_post.rs  migrations.rs  mod.rs  models.rs  schema.sql
