[package]
name = "DDBProy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tokio = { version = "1.28.0", features = ["full"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }
