[package]
name = "DDBP"
version = "0.1.0"
edition = "2021"
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
actix-web = "4.3"
mongodb = "3.2.3" 
tokio = { version = "1.28", features = ["full"] }
chrono = "0.4"
dotenv = "0.15"
tracing = "0.1.37"
tracing-subscriber = "0.3.18"
num_cpus = "1.16"
futures-util = "0.3"
