[package]
name = "social_media_api"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
actix-web = "4.3"
mongodb = "2.5"
tokio = { version = "1.28", features = ["full"] }
chrono = "0.4"
